--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "HTML5-Reset": "~2.1.2",
     "jquery": "~2.1.3",
-    "bourbon": "~4.2.2"
+    "bourbon": "~4.2.2",
+    "jquery.typer": "*"
   }
 }
