--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "HTML5-Reset": "~2.1.2",
     "jquery": "~2.1.3",
     "bourbon": "~4.2.2",
-    "jquery.typer": "*"
+    "jquery.typer": "*",
+    "sass-color-helpers": "~2.0.0"
   }
 }
